feat(quiz): enhance quiz generation service with new configuration options and improved document handling

--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,20 @@ SYNC_DATABASE_URL=postgresql+psycopg2://postgres:postgres@localhost:5432/vinaaca
 
 # LangChain / LLM
 OPENAI_API_KEY=your-openai-api-key-here
-MODEL_NAME=gpt-3.5-turbo
+GOOGLE_API_KEY=your-google-api-key-here
+HUGGING_FACE_API_KEY=your-huggingface-api-key-here
+# or gpt-4.1, gpt-3.5-turbo, etc.
+OPENAI_MODEL_NAME=gpt-3.5-turbo
+GEMINI_MODEL_NAME=gemini-2.0-flash
+LLM_PROVIDER=google
 TEMPERATURE=0.7
-MAX_TOKENS=500
+MAX_TOKENS=5000
+EMBEDDING_MODEL=text-embedding-3-small
+
+# RAG Configuration
+VECTOR_DIMENSION=1536
+RETRIEVAL_TOP_K=5
+SIMILARITY_THRESHOLD=0.7
 
 # Redis (Optional)
 REDIS_URL=redis://localhost:6379/0
