--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,16 +29,10 @@ jobs:
       - name: Install linting tools
         run: |
           python -m pip install --upgrade pip
-          pip install ruff black isort
+          pip install ruff
 
       - name: Run Ruff (linter)
         run: ruff check src/ --output-format=github
-
-      - name: Check Black formatting
-        run: black --check src/
-
-      - name: Check import sorting (isort)
-        run: isort --check-only src/
 
   test:
     name: Run Tests
