--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,60 +34,60 @@ jobs:
       - name: Run Ruff (linter)
         run: ruff check src/ --output-format=github
 
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
-    needs: lint
-    services:
-      postgres:
-        image: ankane/pgvector:latest
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: chatbot_test
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-          cache: "pip"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest-cov
-
-      - name: Run tests with coverage
-        env:
-          DATABASE_URL: postgresql+asyncpg://postgres:postgres@localhost:5432/chatbot_test
-          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: |
-          pytest tests/ -v --cov=src --cov-report=xml --cov-report=term-missing
-
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v4
-        with:
-          files: ./coverage.xml
-          fail_ci_if_error: false
-        continue-on-error: true
+  #  test:
+  #    name: Run Tests
+  #    runs-on: ubuntu-latest
+  #    needs: lint
+  #    services:
+  #      postgres:
+  #        image: ankane/pgvector:latest
+  #        env:
+  #          POSTGRES_USER: postgres
+  #          POSTGRES_PASSWORD: postgres
+  #          POSTGRES_DB: chatbot_test
+  #        ports:
+  #          - 5432:5432
+  #        options: >-
+  #          --health-cmd pg_isready
+  #          --health-interval 10s
+  #          --health-timeout 5s
+  #          --health-retries 5
+  #
+  #    steps:
+  #      - name: Checkout code
+  #        uses: actions/checkout@v4
+  #
+  #      - name: Set up Python
+  #        uses: actions/setup-python@v5
+  #        with:
+  #          python-version: "3.11"
+  #          cache: "pip"
+  #
+  #      - name: Install dependencies
+  #        run: |
+  #          python -m pip install --upgrade pip
+  #          pip install -r requirements.txt
+  #          pip install pytest-cov
+  #
+  #      - name: Run tests with coverage
+  #        env:
+  #          DATABASE_URL: postgresql+asyncpg://postgres:postgres@localhost:5432/chatbot_test
+  #          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+  #          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+  #        run: |
+  #          pytest tests/ -v --cov=src --cov-report=xml --cov-report=term-missing
+  #
+  #      - name: Upload coverage report
+  #        uses: codecov/codecov-action@v4
+  #        with:
+  #          files: ./coverage.xml
+  #          fail_ci_if_error: false
+  #        continue-on-error: true
 
   build:
     name: Build Docker Image
     runs-on: ubuntu-latest
-    needs: test
+    #    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
