refactor: update application name and restructure quiz service components
- Change application name from 'chatbot-service' to 'ai-service' in configuration files.
- Rename quiz endpoint module from 'quiz' to 'quiz_controller' for clarity.
- Modify timestamp fields in models to use 'created_date' and 'updated_date'.
- Implement global exception handling for improved error management.
- Update CI/CD pipeline for better linting and security checks.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,17 @@
 # FastAPI core
 fastapi
 uvicorn[standard]
-starlette
 pydantic
 pydantic-settings
 
-# LangChain/AI
-langchain
+# LangChain/AI (only used packages)
 langchain-core
 langchain-community
 langchain-openai
 langchain-google-genai
-langchain-huggingface
 
 rank_bm25
 faiss-cpu
-tiktoken
-sentence-transformers
 
 # Database
 sqlalchemy[asyncio]
@@ -31,9 +26,6 @@ py-eureka-client
 python-dotenv
 python-multipart
 httpx
-redis
-python-jose[cryptography]
-passlib[bcrypt]
 python-docx
 pandas
 
