--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install ruff
 
+      - name: Check Python Syntax
+        run: |
+          python -m compileall -q src || (echo "Syntax error detected" && exit 1)
+
       - name: Run Ruff (linter)
         run: ruff check src/ --output-format=github
 
@@ -84,25 +88,25 @@ jobs:
   #          fail_ci_if_error: false
   #        continue-on-error: true
 
-  build:
-    name: Build Docker Image
-    runs-on: ubuntu-latest
-    #    needs: test
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: false
-          tags: chatbot-service:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+  #  build:
+  #    name: Build Docker Image
+  #    runs-on: ubuntu-latest
+  #    #    needs: test
+  #    steps:
+  #      - name: Checkout code
+  #        uses: actions/checkout@v4
+  #
+  #      - name: Set up Docker Buildx
+  #        uses: docker/setup-buildx-action@v3
+  #
+  #      - name: Build Docker image
+  #        uses: docker/build-push-action@v5
+  #        with:
+  #          context: .
+  #          push: false
+  #          tags: ai-service:${{ github.sha }}
+  #          cache-from: type=gha
+  #          cache-to: type=gha,mode=max
 
   security:
     name: Security Scan
