feat: implement AI agent tools and chatbot service for course discovery and lesson context retrieval

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ langchain-core
 langchain-community
 langchain-openai
 langchain-google-genai
+langchain-postgres
+langgraph-checkpoint-postgres
 
 rank_bm25
 faiss-cpu
