--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,11 @@ pydantic
 pydantic-settings
 
 # LangChain/AI (only used packages)
-langchain-core
-langchain-community
+langchain
 langchain-openai
 langchain-google-genai
+langchain-postgres
+langgraph-checkpoint-postgres
 
 rank_bm25
 faiss-cpu
